# HeDemo

./: CMakeLists.txt  Doxyfile  README.md  knn.cpp  main.cpp
include/: knn.h
seal/include/SEAL-3.4/seal/util/: config.h
seal/lib/cmake/SEAL-3.4/: SEALConfigVersion.cmake
